# BuhLog

./: .gitignore  BuhLog.cpp  BuhLog.h  CMakeLists.txt  LogManager.cpp  LogManager.h  README.md  ThreadPool.cpp  ThreadPool.h  main.cpp
Examples/: CMakeLists.txt  Mandelbrot.cpp  Mandelbrot.h  main.cpp
include/: BuhLog.h
source/: BuhLog.cpp
